# gm-review-api

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py
src/repositories/: __init__.py
src/shared/: __init__.py  config.py  constants.py  exceptions.py  response_builder.py
tests/: __init__.py  conftest.py
tests/strategies/: __init__.py
tests/unit/examples/: __init__.py
