[project]
name = "gm-review-api"
version = "0.1.0"
description = "Review Management Platform - API Backend"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "aws-lambda-powertools",
    "pydantic",
    "boto3",
    "stripe",
    "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "moto[dynamodb,ses,s3,sqs,events]",
    "ruff",
    "mypy",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
